[gd_scene load_steps=9 format=3 uid="uid://cdppfmbhnfc3d"]

[ext_resource type="Script" uid="uid://bxyyl3oktcgqk" path="res://core/security_camera/security_camera.gd" id="1_05d2b"]
[ext_resource type="Script" uid="uid://dyi5r0theihmc" path="res://core/security_camera/camera_vision_config.gd" id="2_djrot"]
[ext_resource type="Script" uid="uid://cw0363ko8eoy5" path="res://core/security_camera/camera_position.gd" id="2_t0tbx"]
[ext_resource type="Texture2D" uid="uid://cck2p827qqu3f" path="res://core/security_camera/Camera_Top_Off.png" id="3_v1u64"]
[ext_resource type="PackedScene" uid="uid://etadkwfowmko" path="res://core/vision_cone/vision_cone.tscn" id="4_1qdvj"]

[sub_resource type="Resource" id="Resource_sda1o"]
resource_local_to_scene = true
script = ExtResource("2_djrot")
rotaton_speed = 1.0
left_limit = -1.5708
right_limit = 1.5708
color = Color(1, 0.894118, 0.521569, 0.560784)
radius = 256.0
fov = 0.610865
metadata/_custom_type_script = "uid://dyi5r0theihmc"

[sub_resource type="Resource" id="Resource_djrot"]
resource_local_to_scene = true
script = ExtResource("2_t0tbx")
rotation = 0.0
duration_min_sec = 3.0
duration_max_sec = 3.0
metadata/_custom_type_script = "uid://cw0363ko8eoy5"

[sub_resource type="Resource" id="Resource_sy6pc"]
resource_local_to_scene = true
script = ExtResource("2_t0tbx")
rotation = 0.666716
duration_min_sec = 3.0
duration_max_sec = 3.0
metadata/_custom_type_script = "uid://cw0363ko8eoy5"

[node name="SecurityCamera" type="Node2D" groups=["masked_by_player_vision"]]
script = ExtResource("1_05d2b")
vision_config = SubResource("Resource_sda1o")
camera_positions = Array[ExtResource("2_t0tbx")]([SubResource("Resource_djrot"), SubResource("Resource_sy6pc")])

[node name="PositionTimer" type="Timer" parent="."]
one_shot = true

[node name="TrackingResetTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PivotPoint" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="VisionCone" parent="PivotPoint" instance=ExtResource("4_1qdvj")]
unique_name_in_owner = true
vision_cone_config = SubResource("Resource_sda1o")

[node name="Sprite2D" type="Sprite2D" parent="PivotPoint" groups=["masked_by_player_vision"]]
unique_name_in_owner = true
position = Vector2(-17, 0)
rotation = -1.5708
texture = ExtResource("3_v1u64")

[node name="StatusColorRect" type="ColorRect" parent="PivotPoint" groups=["masked_by_player_vision"]]
unique_name_in_owner = true
offset_left = -27.0
offset_top = -13.0
offset_right = -19.0
offset_bottom = -5.0
color = Color(0, 1, 0, 1)

[connection signal="timeout" from="PositionTimer" to="." method="_on_position_timer_timeout"]
[connection signal="timeout" from="TrackingResetTimer" to="." method="_on_tracking_reset_timer_timeout"]
